public enum Sex {
    MALE,
    FEMALE,
    OTHER,
    UNKNOWN
}