public enum UnionType {
    MARRIAGE,
    CIVIL_UNION,
    PARTNERSHIP
}